# FlowStock

./: .env.example  .env.test  .env.test.example  .eslintrc.json  .gitignore  AGENTS.md  Dockerfile.api  FlowStock_Cursor_Sprint1.md  FlowStock_Cursor_Sprint2.md  FlowStock_Cursor_Sprint3.md  README.md  cookie.txt  cookies-jwt.txt  cookies.txt  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  token.txt  tsconfig.base.json  turbo.json
.bmad-core/: install-manifest.yaml
apps/ml-service/: .gitignore  Dockerfile  README-ML.md  pyproject.toml
apps/ml-service/app/: database.py  main.py  scheduler.py
apps/ml-service/app/middleware/: auth.py
apps/ml-service/app/ml/: __init__.py  accuracy_tracker.py  cold_start.py  config.py  inference.py  metrics.py  registry.py  registry_tenant.py
apps/ml-service/app/ml/training/: __init__.py  incremental.py  learning_logger.py  pipeline.py  retrain_job.py  run_cli.py  sales_loader.py  tenant_pipeline.py
apps/ml-service/app/routes/: chat_routes.py
apps/ml-service/app/services/: chat_service.py
apps/ml-service/tests/: conftest.py  test_auth.py
apps/ml-service/tests/integration/: test_chat_routes.py  test_health_ml.py
apps/ml-service/tests/ml/: __init__.py  test_accuracy_tracker.py  test_baseline_model.py  test_cold_start.py  test_incremental.py  test_inference.py  test_learning_logger.py  test_metrics.py  test_pipeline.py  test_registry.py  test_retrain_job.py  test_sales_loader.py  test_tenant_training.py  test_trends_analyzer.py
apps/ml-service/tests/services/: __init__.py  test_chat_service.py
(+623 files in other folders)
