[project]
name = "bmad-ml-service"
version = "0.1.0"
description = "ML/AI service for BMAD stock agent (FastAPI + OpenAI)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

